--- a/Lab_3.Rmd
+++ b/Lab_3.Rmd
@@ -22,22 +22,21 @@ rm(list=ls())
 cat('\014')
 ```
 
-```{r laod data}
+```{r laod data, include=FALSE}
 mto <- read_dta(here("datasets", "mto.dta"))
 ```
 
 ## Question 1: Reflecting on Moving to Opportunity Results
 
-
-Stat sig for young children (econ outcomes, health outcomes) 
-
-Non sig for older childrent and adults
-
+As we heard in the lecture about the Moving to Opportunity Experiment, the program evaluation reported no significant improvements to economic outcomes for adults in the treatment group who received experimental vouchers. However, later studies by Chetty and Katz have shown that there is a statistically significant improvement in economic and health outcomes for young children whose families used the experimental vouchers to move to a low-poverty area. These findings suggest that place does have a causal effect on future outcomes, and that the duration of exposure to lower-poverty areas has an important impact (similar to a “dosage effect” in medicine).
 
 ## Questions  2 & 3: Mean Moved for Contorl & Treatment Groups
 
 ```{r move 1}
 mto_moved <- by(mto$moved, list(mto$voucher), mean)
+
+cat("The fraction of individuals in the control group who moved is is ", mto_moved[1]*100, "%, 
+    while for the treatment group that fraction is ", mto_moved[2]*100, "%", sep="")
 ```
 
 
@@ -46,24 +45,32 @@ mto_moved <- by(mto$moved, list(mto$voucher), mean)
 ```{r move 2}
 moved_lm <- lm(moved~voucher, data = mto)
 moved_lm
+
+cat("Both the linear model and the arithmetic mean calculated above show that 
+    0% of the control group moved and 43.06% of the treatment group moved.")
 ```
 
 ## Question 5: Complianced Rate
 
-One-sided 
+The results demonstrate that there is one-sided non-compliance on the part of people in the treatment group who did not use their experimental voucher to move. 
+
 
 ## Question 6: Intent to Treat (ITT) Effect
 
 ```{r itt}
 kessler_lm <- lm(kessler~voucher, data = mto)
 kessler_lm
+
+cat("This linear model indicates that the ITT effect on the treatment 
+    group's Kessler score is", kessler_lm$coefficients["voucher"])
 ```
 
 ## Question 7: Treatment on the Treated (TOT) Effect
 
 ```{r tot}
 kessler_tot <- kessler_lm$coefficients["voucher"]/moved_lm$coefficients["voucher"]
-kessler_tot
+cat("By adjusting the ITT for compliance, the TOT effect of actually 
+    using the experimental voucher is", kessler_tot)
 ```
 
 ## Question 8: Incorrect As-Treated Analysis
@@ -72,6 +79,9 @@ kessler_tot
 # Make indicator variable moved rather than voucher
 asTreated_lm <- lm(kessler~moved, data = mto) 
 asTreated_lm
+
+cat("By comparing those who complied and those who did not, the As-Treated 
+    effect is calculated to be", asTreated_lm$coefficients["moved"])
 ```
 
 ## Question 9: Incorrect Per Protocol Analysis
@@ -82,14 +92,19 @@ mto_comply <- filter(mto, mto$voucher == mto$moved)
 
 comply_lm <- lm(kessler~voucher, data = mto_comply)
 comply_lm
+
+cat("By excluding non-compliers from the analysis, the Per Protocol 
+    effect is calculated to be", comply_lm$coefficients["voucher"])
+
 ```
 
 ## Question 10: Comparing Measures
 
-
+When comparing the incorrect As-Treated (-.526) and Per Protocol (-.739) metrics with the correct Treatement-on-the-Treated metric (-1.365), we see that the TOT effect is significantly larger in magnitude. This implies that using one of the incorrect measures would lead us to underestimate the effects of the experimental voucher on mental health.
 
 ## Question 11: Bias in As-Treated and Per Protocol Analyses
 
+Both As-Treated and Per Protocol analyses undermine the intended randomization in the trial and introduce selection bias because those who chose not to comply do not do so randomly. In this way, relying on these incorrect metrics introduces additional confounding variable(s) and distorts the true effect of the treatment. Instead, the TOT measure accounts for non-compliance by scaling the observed effect (ITT) proportionately to infer what would have happened had the entire randomly-selected group complied. 
 
 ## Question 12: Visualizing Results
 
@@ -112,10 +127,29 @@ ggplot(data=mto_moved, aes(x=group, y=mean, fill=group)) +
 
 #### 12b: ITT Bar Chart
 ```{r chart 2}
+# Create data frame
+mto_kessler_itt <- mto %>%
+  group_by(voucher) %>% 
+  summarise(mean = mean(kessler)) %>%
+  mutate(group = ifelse(voucher == 1, "Treatment", "Control")) %>%
+  select(group, mean)
 
+# Plot
+ggplot(data=mto_kessler_itt, aes(x=group, y=mean, fill=group)) +
+  geom_bar(stat="identity", show.legend = FALSE, width=.6) +
+  scale_fill_manual(values=c("red", "blue")) +
+  labs(y = "Kessler Psychological Distress Scale", x = "")
 ```
 
 #### 12c: TOT Bar Chart
 ```{r chart 3}
+# Create data frame
+mto_kessler_tot <- mto_kessler_itt
+mto_kessler_tot$mean[2] <- (mto_kessler_tot$mean[1] + kessler_tot)
 
+# Plot
+ggplot(data=mto_kessler_tot, aes(x=group, y=mean, fill=group)) +
+  geom_bar(stat="identity", show.legend = FALSE, width=.6) +
+  scale_fill_manual(values=c("red", "blue")) +
+  labs(y = "Kessler Psychological Distress Scale", x = "")
 ```
